# LFEF

./: .gitignore  README.md  RGB_to_INV_and_HSV.py  app.py  check_feature.py  check_trained_model_update.sh  data_processing.py  dataset.py  ddp_test.py  he.py  import_dataset_path.cfg  inference.py  inference_multiple_pictures_for_evaluate.py  inference_single_picture.py  last_checkpoint.pth  lightssd.py  main.py  multiple_semantic_inference_loss_miou.py  multiple_semantic_inference_pictures.py  pyrightconfig.json  pytorch_to_torchscript.py  requirements.txt  shap_Mobilenet.py  single_semantic_inference.py  smoke_segmentation.py  smoke_segmentation_onnx.py  smoke_segmentation_script.py  sobel_test.py  temp.py  test.py  test_DS0123.sh  test_desmoke.py  test_two_loss.py  testdfd.py  train.py  train_dataset_ratio_8_2.py  train_dataset_train_8_test_DS01.py  train_ddp.py  train_seg_desmoke.py  train_show_2.py  (+15 more)
android_app/: pubspec.yaml
app/: app.py
config/: import_dataset_path.cfg
flagged/: log.csv
model_structure_diagram/: .$desmoke.drawio.bkp  .$structure.drawio.bkp  .$structure.drawio.png.bkp  .$structure_CGNet_3113_4_8_2.png.bkp  .$structure_CGNet_sem_cam.drawio.png.bkp  .$structure_CGNet_sem_cam_4_8.png.bkp  (+8 more)
rust_code/: Cargo.toml
rust_code/process_folder/: Cargo.toml
rust_code/process_folder/src/: main.rs
rust_code/process_video/: Cargo.toml
rust_code/process_video/src/: main.rs
rust_code/src/: lib.rs  main.rs  process.rs  process_folder.rs  process_single_image.rs  process_video.rs
rust_code/src/utils/: image_processing.rs  mod.rs  model.rs
(+456 files in other folders)
