[package]
name = "rust_code"
version = "0.1.0"
edition = "2021"
default-run = "rust_code"

[dependencies]
cargo-update = "16.1.0"
image = "0.25.5"
ndarray = "0.16.1"
opencv = "0.94.2"
# opencv = { version = "0.94.2", features = ["clang-runtime"] }
ort = { version = "2.0.0-rc.9", features = ["cuda"] }
tracing-subscriber = "0.3.19"

[[bin]]
name = "open_camera"
path = "bin/camera.rs"
